--- a/ig-template/package/includes/_append.fragment-css.html
+++ b/ig-template/package/includes/_append.fragment-css.html
@@ -1,2 +1,4 @@
 <!-- add custom css, e.g -->
 <!-- <link href="{{site.data.info.assets}}assets/css/bootstrap-fhir.css" rel="stylesheet"/> -->
+<link rel="stylesheet" href="{{site.data.info.assets}}assets/css/font-awesome-all.min.css">
+<link href="{{site.data.info.assets}}assets/css/local.css" rel="stylesheet"/>
